cmake_minimum_required(VERSION 3.7)
project(HydrusExecuterTools)
if(NOT "${CMAKE_CXX_STANDARD}")
    set(CMAKE_CXX_STANDARD 17)
endif()
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if(WIN32)
set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -O2 -MD -W3 -w34100 -w34189 -w44996 -w44456 -w44457 -w44458 -wd4577 -wd4467 -EHsc ")
else()
set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Wall -Wextra -pipe -g -W -D_REENTRANT -fPIC")
endif()
add_subdirectory(thirdPartyLib)
add_subdirectory(HydrusFiles)
add_subdirectory(HydrusDBIO)
add_subdirectory(HydrusDBSetup)
add_subdirectory(HydrusExecuter)
